@@ -44,8 +44,8 @@ class JackDummyDriver : public JackAudioDriver
         virtual ~JackDummyDriver()
         {}
 
-        int Open(jack_nframes_t frames_per_cycle,
-                 jack_nframes_t rate,
+        int Open(jack_nframes_t buffersize,
+                 jack_nframes_t samplerate,
                  bool capturing,
                  bool playing,
                  int chan_in,
