@@ -63,12 +63,12 @@ namespace Jack
 
 //*************************************initialization***********************************************************************
 
-    int JackNetDriver::Open ( jack_nframes_t nframes, jack_nframes_t samplerate, bool capturing, bool playing,
+    int JackNetDriver::Open ( jack_nframes_t buffer_size, jack_nframes_t samplerate, bool capturing, bool playing,
                               int inchannels, int outchannels, bool monitor,
                               const char* capture_driver_name, const char* playback_driver_name,
                               jack_nframes_t capture_latency, jack_nframes_t playback_latency )
     {
-        int res = JackAudioDriver::Open ( nframes, samplerate, capturing, playing, inchannels, outchannels, monitor,
+        int res = JackAudioDriver::Open ( buffer_size, samplerate, capturing, playing, inchannels, outchannels, monitor,
                                           capture_driver_name, playback_driver_name, capture_latency, playback_latency );
         fEngineControl->fPeriod = 0;
         fEngineControl->fComputation = 500 * 1000;
