@@ -21,6 +21,10 @@ Romain Moret
   Jackdmp changes log
 ---------------------------
 
+2008-07-12 Stephane Letz  <letz@grame.fr>
+
+	* Loopback driver working again.
+
 2008-07-08 Stephane Letz  <letz@grame.fr>
 
 	* Add jack_get_descriptor in internal clients API.
